model_id/tests/fail/bad_attribute.rs
use model_id::ModelId;

#[derive(ModelId)]
pub enum BadAttribute {
    #[model_id(not_a_string)]
    InvalidVariant,
}

fn main() {}
